examples/__outputs__/60_extension/extension_opentelemetry__opentelemetry.output.txt
/some/path/to/extension_opentelemetry__opentelemetry.ts:XX:XX
const data = await graffle.gql`query { pokemons { name } }`.send()
                           ^


TypeError: graffle.gql is not a function
    at <anonymous> (/some/path/to/extension_opentelemetry__opentelemetry.ts:XX:XX:28)
    at ModuleJob.run (node:internal/modules/esm/module_job:XX:XX)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:XX:XX)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:XX:XX)

Node.js vXX.XX.XX